--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,9 @@ Author: Soenke Hoffmann
 Maintainer: Tobias Kranz <tobias.kranz@uni-trier.de>
 Description: This package is written to help undergraduate students to use R
     for basic econometrics. Primarily, the package is meant to accompany the
-    german textbook: L. v.Auer and Hoffmann S. (2016), Oekonometrie - Das
-    Arbeitsbuch, Springer-Gabler.
+    german textbook: 
+    Auer, L.v., S. Hoffmann & T. Kranz (2023) Ökonometrie - Das R-Arbeitsbuch, 
+    2nd ed., Springer-Gabler.
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
