--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(pc.test)
 export(pdw)
 export(qlr.cv)
 export(qlr.test)
+export(r.sample)
 export(reset.test)
 export(rm.all)
 export(rprofile.add)
