--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Soenke Hoffmann
 Maintainer: Tobias Kranz <tobias.kranz@uni-trier.de>
 Description: This package is written to help undergraduate as well as graduate
     students to use R for basic econometrics. Primarily, the package is meant to 
-    accompany the german textbook: 
+    accompany the German textbook: 
     Auer, L.v., S. Hoffmann & T. Kranz (2023) Ökonometrie - Das R-Arbeitsbuch, 
     2nd ed., Springer-Gabler.
 License: GPL (>= 2)
