new fun + data set

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(qlr.test)
 export(r.sample)
 export(reset.test)
 export(rm.all)
+export(roll.win)
 export(rprofile.add)
 export(rprofile.open)
 export(showfile)
