--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(stats,qt)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,terms)
+importFrom(stats,var)
 importFrom(stats,vcov)
 importFrom(utils,combn)
 importFrom(utils,data)
