--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,6 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    foreign
+    foreign, rstudioapi
 Depends: 
     R (>= 2.10)
