--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(pdw)
 export(qlr.cv)
 export(qlr.test)
 export(r.sample)
+export(reset)
 export(reset.test)
 export(rm.all)
 export(roll.win)
@@ -45,6 +46,8 @@ export(rprofile.open)
 export(showfile)
 export(wh.test)
 importFrom(foreign,read.dta)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,dev.off)
 importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
@@ -54,10 +57,12 @@ importFrom(graphics,legend)
 importFrom(graphics,lines)
 importFrom(graphics,matlines)
 importFrom(graphics,matplot)
+importFrom(graphics,par)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(graphics,segments)
 importFrom(graphics,text)
+importFrom(rstudioapi,getActiveDocumentContext)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
@@ -87,3 +92,4 @@ importFrom(stats,var)
 importFrom(stats,vcov)
 importFrom(utils,combn)
 importFrom(utils,data)
+importFrom(utils,install.packages)
