--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(ddw)
 export(def.exp)
 export(def.log)
 export(dw.test)
-export(get.group)
 export(gq.test)
 export(hcc)
 export(hilu)
@@ -36,7 +35,7 @@ export(pc.test)
 export(pdw)
 export(qlr.cv)
 export(qlr.test)
-export(r.sample)
+export(repeat.sample)
 export(reset)
 export(reset.test)
 export(rm.all)
