--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Written to help undergraduate as well as graduate
     2nd ed., Springer,
     from which the exercises cover all the topics from the textbook:
     Auer, L.v. (2023): `Ökonometrie - Eine Einführung`, 8th ed., Springer.
-URL: https://oekonometrie-lernen.de, https://github.com/OvGU-SH/desk
+URL: https://github.com/OvGU-SH/desk
 BugReports: https://github.com/OvGU-SH/desk/issues    
 License: GPL (>=3)
 Encoding: UTF-8
@@ -29,8 +29,7 @@ Imports:
 Suggests: 
     stargazer,
     foreign,
-    manipulate,
-    testthat (>= 3.0.0)
+    readxl
 Depends: 
     R (>= 3.1)
 Config/testthat/edition: 3
