--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,8 @@ Imports:
 Suggests: 
     stargazer,
     foreign,
-    readxl
+    readxl,
+    testthat (>= 3.0.0)
 Depends: 
     R (>= 3.1)
+Config/testthat/edition: 3
