--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ export(
   def.exp,
   def.log,
   dw.test,
-  go,
   gq.test,
   hcc,
   hilu,
@@ -33,6 +32,7 @@ export(
   makedata.bc,
   makedata.corr,
   mc.table,
+  new.session,
   ols,
   ols.has.const,
   ols.infocrit,
