--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,8 @@ Suggests:
     stargazer,
     foreign,
     readxl,
+    wooldridge,
+    lmtest,
     testthat (>= 3.0.0)
 Depends: 
     R (>= 3.5.0)
