--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Written to help undergraduate as well as graduate students to get s
     with R for basic econometrics without the need to import specific functions
     and datasets from many different sources. Primarily, the package is meant to 
     accompany the German textbook Auer, L.v., Hoffmann, S., Kranz, T. (2023,
-    ISBN: XXXXX) from which the exercises cover all the topics from the textbook
+    ISBN: 978-3-662-68263-0) from which the exercises cover all the topics from the textbook
     Auer, L.v. (2023, ISBN: 978-3-658-42699-6).
 URL: https://github.com/OvGU-SH/desk
 BugReports: https://github.com/OvGU-SH/desk/issues    
