--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,10 @@ Suggests:
     readxl,
     wooldridge,
     lmtest,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    knitr,
+    rmarkdown
 Depends: 
     R (>= 3.5.0)
 Config/testthat/edition: 3
+VignetteBuilder: knitr
